feat(TypescriptDefinition): mark parameters as optional
Instead of printing two overloads that are fully equal except for one
additional parameter, merge the overloads and mark that parameter as
optional.

  function foo(a: string): boolean
  function foo(a: string, b: int): boolean
  function foo(a: string, b: int, c: int): boolean
  function foo(a: string, b: int, c: int, d: string): number

it will now print:

  function foo(a: string, b?: int): boolean
  function foo(a: string, b: int, c?: int): boolean
  function foo(a: string, b: int, c: int, d: string): number

NOTE: Marking multiple consecutive paramters optional is not correct,
because otherwise TypeScript will allow to pass `undefined` for a
"middle" parameter:

  foo(someA, undefined, someC);

This would be incorrect and lead to a function not found error.